<resources>
    <string name="app_name">PhotoCloud</string>
    <string name="button_upload">Upload a Photo</string>
    <string name="button_view">View My Photos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be 6 letters at least.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_out">Sign out</string>
    <string name="register_title">Sign Up for PhotoCloud</string>
    <string name="login_title">Login for PhotoCloud</string>
</resources>
