<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".activities.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/upload_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="176dp"
        android:layout_height="85dp"
        android:background="#84c305"
        android:onClick="pickPhoto"
        android:text="@string/button_upload"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/view_btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="176dp"
        android:layout_height="85dp"
        android:background="#0887b6"
        android:onClick="showPhotos"
        android:text="@string/button_view"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_btn" />

    <Button
        android:id="@+id/sign_out_btn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/action_sign_out"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>